[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/gameWon.gd" type="Script" id=1]

[node name="gameWon" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="colorRect" type="ColorRect" parent="."]
margin_left = 68.0
margin_top = 68.0
margin_right = 668.0
margin_bottom = 198.0
color = Color( 0, 0, 0, 0.705882 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gameWonLabel" type="Label" parent="."]
margin_left = 315.72
margin_top = 80.0
margin_right = 403.72
margin_bottom = 100.0
text = "Game Won!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playAgain" type="Button" parent="."]
margin_left = 90.0
margin_top = 132.0
margin_right = 642.0
margin_bottom = 164.0
text = "Play Again"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mainMenu" type="Button" parent="."]
margin_left = 90.0
margin_top = 160.0
margin_right = 642.0
margin_bottom = 192.0
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="currentScore" type="Label" parent="."]
margin_left = 500.0
margin_top = 80.0
margin_right = 572.0
margin_bottom = 123.0
text = "Score
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="highScore" type="Label" parent="."]
margin_left = 100.0
margin_top = 80.0
margin_right = 216.0
margin_bottom = 123.0
text = "High Score
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="playAgain" to="." method="_on_playAgain_pressed"]
[connection signal="pressed" from="mainMenu" to="." method="_on_mainMenu_pressed"]
